src/css/styles.scss
/* ... */
.vis-network .item.red {
  background-color: red;
  border-color: red;
  color: #ffffff;
}
.vis-network .item.orange {
  background-color: orange;
  border-color: orange;
}
.vis-network .item.magenta {
  background-color: magenta;
  border-color: magenta;
  color: #ffffff;
}
.vis-network .item.past {
  filter:alpha(opacity=50);
  opacity: 0.5;
}
.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
  background-color: $navbar-color;
  color: $primary-font-color;
}
.navbar-header .navbar-brand {
  margin: 10px 10px 10px 10px;
  color: #fff;
  letter-spacing: 0.1em;
  font-size: 20px;
  img {
    display: inline-block;
    margin-top: -5px;
    margin-left: 30px;
  }
  @media screen and (max-width: 768px) {
    img {
      margin-left: 0px;
    }
  }
}

.navbar-header img:hover,.navbar-header img:active,.navbar-header img:focus, .navbar-header a:hover {
    -webkit-filter: invert(35%);
    color: invert(35%);
}

.navbar-collapse .nav li {
  margin: 10px 5px;
  @include border-radius(2px);
  &:hover {
    background-color: $btn-default-hover-color;
  }
  a {
    color: #fff;
  }
}
.navbar-right {
  margin-right: 30px;
}
.navbar-toggle {
  border: none;
  margin-top: 16px;
}
.navbar-inverse .navbar-toggle:focus,
.navbar-inverse .navbar-toggle:hover {
  background-color: $btn-default-color;
}
@media screen and (max-width: 768px) {
  .hide {
    display: block!important;
    visibility: visible;
    display: none;
  }
  a.hide {
    width: 10px;
  }
}
iframe {
  max-width: 100%;
  border-radius: 5px;
}
th {
  text-align: center;
}

/*
 * Sidebar
 */
/* Hide for mobile, show later */
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto;
    /* Scrollable contents if viewport is shorter than content. */
    background-color: $side-nav-color;
    border-right: 1px solid #eee;
  }
}
/* Sidebar navigation */
.nav-sidebar {
  li {
    h1 {
      font-size: 18px;
      font-weight: 700;
      letter-spacing: 1px;
      margin-left: 15px;
      margin-top: 25px;
    }
    a {
      color: $primary-font-color;
      font-size:15px;
      &:hover {
        background-color: $navbar-color;
        @include border-radius(2px);
      }
      &:active {
        background-color: $btn-default-color;
        color: white;
      }
    }
    a.activeTab {
      background-color: $btn-default-color;
      @include border-radius(2px);
      color: #fff;
    }
    padding-right: 32px;
    padding-left: 32px;
    margin: 10px 5px;
  }
}
.nav>li>a:focus,
.nav>li>a:hover,
.nav>li>a:active {
  text-decoration: none;
  @include border-radius(2px);
  background-color: $btn-default-color;
  color: #fff;
}
/*
 * Main content
 */
.main {
  padding: 20px;
  max-width: 100%;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
    max-width: 100%;
  }
}
.main .page-header {
  margin-top: 25px;
  margin-left: 20px;
  font-weight: 100;
  border-color: $primary-border-color;
  max-width: 88%;

}

.btn-status-default {
  @include border-radius(2px);
  color: $secondary-background-color;
  border-style: none;
  background-color: $btn-default-color;
  border-color: $btn-default-color;
  padding-left: 15px;
  padding-right: 15px;
  margin: 2px 2px 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
}
.btn-status-default:hover,
.btn-status-default:focus,
.btn-status-default.focus,
.btn-status-default:active,
.btn-status-default.active,
.open > .dropdown-toggle.btn-status-default {
  color: $secondary-background-color;
  background-color: $btn-default-hover-color;
  border-color: $btn-default-hover-color;
  outline: none;
}
.btn-status-default:active,
.btn-status-default.active,
.open > .dropdown-toggle.btn-status-default {
  background-image: none;
}
.btn-status-default.disabled,
.btn-status-default[disabled],
fieldset[disabled] .btn-status-default,
.btn-status-default.disabled:hover,
.btn-status-default[disabled]:hover,
fieldset[disabled] .btn-status-default:hover,
.btn-status-default.disabled:focus,
.btn-status-default[disabled]:focus,
fieldset[disabled] .btn-status-default:focus,
.btn-status-default.disabled.focus,
.btn-status-default[disabled].focus,
fieldset[disabled] .btn-status-default.focus,
.btn-status-default.disabled:active,
.btn-status-default[disabled]:active,
fieldset[disabled] .btn-status-default:active,
.btn-status-default.disabled.active,
.btn-status-default[disabled].active,
fieldset[disabled] .btn-status-default.active {
  color: #fff;
  background-color: $btn-default-color;
  @include border-radius(2px);
  opacity: 0.5;
  outline: none;
}
a.btn-status-default:hover,
a.btn-status-default:active,
a.btn-status-default:focus {
  text-decoration: none;
}
.btn-status-danger {
  @include border-radius(2px);
  color: $secondary-background-color;
  border-style: none;
  background-color: $btn-danger-color;
  border-color: $btn-danger-color;
  padding-left: 15px;
  padding-right: 15px;
  margin: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
}
.btn-status-danger:hover,
.btn-status-danger:focus,
.btn-status-danger.focus,
.btn-status-danger:active,
.btn-status-danger.active,
.open > .dropdown-toggle.btn-status-danger {
  @include border-radius(2px);
  color: $secondary-background-color;
  background-color: $btn-danger-hover-color;
  border-color: $btn-danger-hover-color;
  outline: none;
}
/* ... */

